2011-05-12  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in: Back to development, version bumped.

2011-02-20  Onkar Shinde  <onkarshinde@gmail.com>

	* po/ta.po, po/LINGUAS, AUTHORS, NEWS: New Tamil translation from
	launchpad. Ready for release.

2010-12-12  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c: Fix incorrect use of 'GTK_CHECK_VERSION' macro.
	* src/file-op.c, src/file-op-gio.c: Added code to save last directory
	from/to where file was opened/saved. Fixes bug LP:#680100.

2010-10-11  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/8085-instructions.c: Added patch for bug LP: #579320. Thanks
	to Debjit Biswas.

2010-09-26  Onkar Shinde  <onkarshinde@gmail.com>

	* src/callbacks.c: Add an error message to be shown when assembly
	tutorial file is not found. Mark 'Select font' string for translation.
	* po/gnusim8085.pot: Update to include latest strings.
	* po/*.po: Auto update.
	* po/ar.po: Updated Arabic translation from launchpad.

2010-09-25  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in, src/main.c: Use autoconf variable to specify windows
	build. Use this variable to decide when to set 'localedir' to apprpriate
	windows directory. Fixes compiler warning on non-windows build.
	* installer.nsi.in: Show 'Run Program' checkbox in installer finish
	screen only when GTK+ installer is not embedded. This avoids an error
	being shown about dll loading.
	* src/bridge.c: Do not ignore breakpoints when stepping through code.
	Patch by Ramanathan. Fixes bug LP: #579318.

2010-09-24  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/8085-instructions.c: CMP instruction should not check and
	set S, P and AC flags as there is no result that is computed. It
	affects only C and Z flags. Hence removed most code in that
	function. Fixes bug LP: #579320.

	* src/8085-instructions.c: Fixed the long standing DAA
	bug. Followed http://www.ray.masmcode.com/BCDdaa.html plus had to