@@ -1,7 +1,4 @@
 ## Process this file with automake to produce Makefile.in
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
 
 SUBDIRS = po src pixmaps doc data
 
