@@ -1,7 +1,4 @@
 dnl Process this file with autoconf to produce a configure script.
-dnl Created by Anjuta - will be overwritten
-dnl If you don't want it to overwrite it,
-dnl 	Please disable it in the Anjuta project configuration
 
 AC_INIT([gnusim8085], [1.3.8], [https://bugs.launchpad.net/gnusim8085])
 AC_DEFINE([PACKAGE_URL],["http://www.gnusim8085.org/"],[Website URL])
