@@ -1,9 +1,5 @@
 ## Process this file with automake to produce Makefile.in
 
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
-
 gnusim8085_docdir = $(docdir)
 gnusim8085_doc_DATA = asm-guide.txt
 
