@@ -1,9 +1,5 @@
 # List of source files containing translatable strings.
 
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
-
 # Source files
 src/callbacks.c
 src/interface.c
